--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,5 @@ export(conan_dryrun)
 export(conan_install)
 export(conan_install_plan)
 export(conan_scripts)
+export(conan_sources)
 export(conan_write_plan)
