--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,5 @@ export(conan_install)
 export(conan_install_plan)
 export(conan_scripts)
 export(conan_sources)
+export(conan_watch)
 export(conan_write_plan)
