--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: conan
 Title: Conan the Librarian
-Version: 0.1.1
+Version: 1.9.90
 Authors@R: c(person("Rich", "FitzJohn", role = c("aut", "cre"),
                     email = "rich.fitzjohn@gmail.com"),
              person("Imperial College of Science, Technology and Medicine",
@@ -14,12 +14,5 @@ RoxygenNote: 7.2.3
 URL: https://github.com/mrc-ide/conan
 BugReports: https://github.com/mrc-ide/conan/issues
 Suggests:
-    callr,
-    docopt,
-    mockery,
-    pkgcache,
-    pkgdepends (>= 0.1.0),
-    progress,
-    testthat,
-    withr
+    testthat
 Language: en-GB
