--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,11 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 URL: https://github.com/mrc-ide/conan
 BugReports: https://github.com/mrc-ide/conan/issues
+Imports:
+    cli,
+    glue
 Suggests:
-    testthat
+    mockery,
+    testthat,
+    withr
 Language: en-GB
