--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,10 @@ URL: https://github.com/mrc-ide/conan
 BugReports: https://github.com/mrc-ide/conan/issues
 Imports:
     cli,
+    fs,
     glue
 Suggests:
+    callr,
     mockery,
     testthat,
     withr
