--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: conan
+Package: conan2
 Title: Conan the Librarian
 Version: 1.9.90
 Authors@R: c(person("Rich", "FitzJohn", role = c("aut", "cre"),
